# backend/docs/swagger.yaml
@@ -51,12 +51,12 @@ paths:
             $ref: '#/definitions/handler.refreshStruct'
         "400":
           description: 'Possible messages: ERR_INVALID_INPUT - Wrong structure of
-            input json'
+            input json; ERR_NO_SUCH_USER - User with such name and password does not
+            exist;'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: 'Possible messages: ERR_NO_SUCH_USER - User with such name
-            and password does not exist; ERR_INTERNAL - Error on server'
+          description: 'Possible messages: ERR_INTERNAL - Error on server; '
           schema:
             $ref: '#/definitions/handler.errorResponse'
         default:
@@ -89,14 +89,17 @@ paths:
             $ref: '#/definitions/handler.refreshStruct'
         "400":
           description: 'Possible messages: ERR_INVALID_INPUT - Wrong structure of
-            input json'
+            input json; ERR_NO_SUCH_USER - User with id as in access token does not
+            exist; ERR_ACCESS_TOKEN_WRONG - Wrong access token; ERR_REFRESH_TOKEN_WRONG
+            - Wrong refresh token;'
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "401":
+          description: 'Possible messages: ERR_UNAUTHORIZED - Refresh token expired;'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: 'Possible messages: ERR_NO_SUCH_USER - User with id as in refresh
-            token does not exist; ERR_INTERNAL - Error on server; ERR_ACCESS_TOKEN_WRONG
-            - Wrong access token; ERR_REFRESH_TOKEN_WRONG - Wrong refresh token; ERR_UNAUTHORIZED
-            - Refresh token expired; '
+          description: 'Possible messages: ERR_INTERNAL - Error on server; '
           schema:
             $ref: '#/definitions/handler.errorResponse'
         default:
@@ -128,12 +131,11 @@ paths:
             $ref: '#/definitions/handler.refreshStruct'
         "400":
           description: 'Possible messages: ERR_INVALID_INPUT - Wrong structure of
-            input json'
+            input json; ERR_USER_EXISTS - User with such name already exists;'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: 'Possible messages: ERR_USER_EXISTS - User with such name already
-            exists; ERR_INTERNAL - Error on server'
+          description: 'Possible messages: ERR_INTERNAL - Error on server; '
           schema:
             $ref: '#/definitions/handler.errorResponse'
         default:
@@ -143,12 +145,12 @@ paths:
       summary: Register
       tags:
       - auth
-  /user-actions/get_user_info:
+  /user-actions/get-user-info:
     get:
       consumes:
       - application/json
       description: Get username by id
-      operationId: get_user_info
+      operationId: get-user-info
       produces:
       - application/json
       responses:
@@ -156,17 +158,16 @@ paths:
           description: OK
         "400":
           description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - There is no id
-            in token payload'
+            in token payload/Wrong structure of Access Token/No Access Token; ERR_NO_SUCH_USER
+            - User with such id not found;'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "401":
-          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired
-            or absent; ERR_ACCESS_TOKEN_WRONG - Wrong structure of Access Token'
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: 'Possible messages: ERR_NO_SUCH_USER - User with such id not
-            found; ERR_INTERNAL - Error on server'
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         default:
@@ -189,17 +190,16 @@ paths:
           description: OK
         "400":
           description: 'Possible messages: ERR_ACCESS_TOKEN_WRONG - There is no id
-            in token payload'
+            in token payload/Wrong structure of Access Token/No Access Token; ERR_NO_SUCH_USER
+            - User with such id not found;'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "401":
-          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired
-            or absent; ERR_ACCESS_TOKEN_WRONG - Wrong structure of Access Token'
+          description: 'Possible messages: ERR_UNAUTHORIZED - Access Token expired'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: 'Possible messages: ERR_NO_SUCH_USER - User with such id not
-            found; ERR_INTERNAL - Error on server'
+          description: 'Possible messages: ERR_INTERNAL - Error on server'
           schema:
             $ref: '#/definitions/handler.errorResponse'
         default:
