# backend/pkg/handler/auth.go
@@ -14,8 +14,8 @@ import (
 // @Produce json
 // @Param input body gotype.User true "new account info"
 // @Success 200 {object} handler.refreshStruct
-// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json"
-// @Failure 500 {object} errorResponse "Possible messages: ERR_USER_EXISTS - User with such name already exists; ERR_INTERNAL - Error on server"
+// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json; ERR_USER_EXISTS - User with such name already exists;"
+// @Failure 500 {object} errorResponse "Possible messages: ERR_INTERNAL - Error on server; "
 // @Failure default {object} errorResponse
 // @Router /auth/register [post]
 func (h *Handler) register(c *gin.Context) {
@@ -46,8 +46,8 @@ func (h *Handler) register(c *gin.Context) {
 // @Produce json
 // @Param input body gotype.User true "login and password"
 // @Success 200 {object} handler.refreshStruct
-// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json"
-// @Failure 500 {object} errorResponse "Possible messages: ERR_NO_SUCH_USER - User with such name and password does not exist; ERR_INTERNAL - Error on server"
+// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json; ERR_NO_SUCH_USER - User with such name and password does not exist;"
+// @Failure 500 {object} errorResponse "Possible messages: ERR_INTERNAL - Error on server; "
 // @Failure default {object} errorResponse
 // @Router /auth/login [post]
 func (h *Handler) login(c *gin.Context) {
@@ -83,8 +83,9 @@ type refreshStruct struct {
 // @Produce json
 // @Param input body handler.refreshStruct true "RefreshToken and AccessToken"
 // @Success 200 {object} handler.refreshStruct
-// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json"
-// @Failure 500 {object} errorResponse "Possible messages: ERR_NO_SUCH_USER - User with id as in refresh token does not exist; ERR_INTERNAL - Error on server; ERR_ACCESS_TOKEN_WRONG - Wrong access token; ERR_REFRESH_TOKEN_WRONG - Wrong refresh token; ERR_UNAUTHORIZED - Refresh token expired; "
+// @Failure 400 {object} errorResponse "Possible messages: ERR_INVALID_INPUT - Wrong structure of input json; ERR_NO_SUCH_USER - User with id as in access token does not exist; ERR_ACCESS_TOKEN_WRONG - Wrong access token; ERR_REFRESH_TOKEN_WRONG - Wrong refresh token;"
+// @Failure 401 {object} errorResponse "Possible messages: ERR_UNAUTHORIZED - Refresh token expired;"
+// @Failure 500 {object} errorResponse "Possible messages: ERR_INTERNAL - Error on server; "
 // @Failure default {object} errorResponse
 // @Router /auth/refresh [post]
 func (h *Handler) refresh(c *gin.Context) {
